Fixed project icons and buttons wrapping

--- a/css/project.css
+++ b/css/project.css
@@ -9,6 +9,17 @@
     font-family: var(--font-secondary);
 }
 
+.project__icons {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+    column-gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
 .project__icon {
     font-size: 2rem;
     color: var(--color-dark-secondary);
@@ -22,6 +33,8 @@
 .project__buttons {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 2rem;
     column-gap: 1rem;
 }
 
@@ -29,6 +42,7 @@
     padding: 0.5rem 1.5rem;
     font-size: 1rem;
     text-decoration: none;
+    text-wrap: nowrap;
     border: 1px solid var(--color-dark);
     color: var(--color-dark);
     transition: 0.25s;
